[gd_scene load_steps=12 format=3 uid="uid://bustae523mxua"]

[ext_resource type="Script" uid="uid://dlobmj20yhk1f" path="res://barkley2/scenes/Player/o_cbt_hoopz_cinema_base.gd" id="1_kxy2o"]
[ext_resource type="PackedScene" uid="uid://c54kloot7bcu2" path="res://barkley2/scenes/Objects/System/o_shadow.tscn" id="2_6c22w"]
[ext_resource type="PackedScene" uid="uid://bcbxf4scjowqy" path="res://barkley2/scenes/_utilityStation/oStep_Smoke.tscn" id="3_dl1mb"]
[ext_resource type="SpriteFrames" uid="uid://24eor6kh3hdq" path="res://barkley2/resources/Player/hoopz_normal.tres" id="4_yeelg"]
[ext_resource type="SpriteFrames" uid="uid://be8tuhwe6258k" path="res://barkley2/resources/Player/combat_lower_body_normal.tres" id="5_xt58p"]
[ext_resource type="SpriteFrames" uid="uid://dh4nk0fc64erw" path="res://barkley2/resources/Player/combat_arm_back_normal.tres" id="6_xhkf0"]
[ext_resource type="SpriteFrames" uid="uid://d1m3bdwt0blc0" path="res://barkley2/resources/Player/combat_upper_body_normal.tres" id="7_ksmw3"]
[ext_resource type="SpriteFrames" uid="uid://dgnkrv5sdn82d" path="res://barkley2/resources/Player/combat_weapon.tres" id="8_fw1v2"]
[ext_resource type="SpriteFrames" uid="uid://ce5btxh5p4nbk" path="res://barkley2/resources/Player/combat_arm_front_normal.tres" id="9_7ql2g"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_sbutq"]
friction = 0.25
bounce = 0.25
absorbent = true

[sub_resource type="CircleShape2D" id="CircleShape2D_aubae"]

[node name="o_cbt_hoopz" type="RigidBody2D" node_paths=PackedStringArray("hoopz_normal_body", "combat_upper_sprite", "combat_lower_sprite", "combat_arm_back", "combat_arm_front", "combat_weapon", "step_smoke", "ActorNav", "ActorCol")]
collision_layer = 3
mass = 70.0
physics_material_override = SubResource("PhysicsMaterial_sbutq")
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 2
linear_damp = 10.0
script = ExtResource("1_kxy2o")
hoopz_normal_body = NodePath("hoopz_normal_body")
combat_upper_sprite = NodePath("combat_upper_body")
combat_lower_sprite = NodePath("combat_lower_body")
combat_arm_back = NodePath("combat_arm_back")
combat_arm_front = NodePath("combat_arm_front")
combat_weapon = NodePath("combat_weapon")
step_smoke = NodePath("step_smoke")
ActorNav = NodePath("ActorNav")
ActorCol = NodePath("hoopz_collision")

[node name="o_Shadow" parent="." instance=ExtResource("2_6c22w")]

[node name="hoopz_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_aubae")

[node name="step_smoke" parent="." instance=ExtResource("3_dl1mb")]
position = Vector2(0, -1)
amount = 30

[node name="hoopz_normal_body" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = ExtResource("4_yeelg")
animation = &"stand"
speed_scale = 1.5
centered = false
offset = Vector2(-22, -41)

[node name="aim_origin" type="Marker2D" parent="."]
position = Vector2(0, -16)

[node name="combat_lower_body" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("5_xt58p")
animation = &"walk_W"
centered = false
offset = Vector2(-22, -42)

[node name="combat_arm_back" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("6_xhkf0")
centered = false
offset = Vector2(-22, -41)

[node name="combat_upper_body" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("7_ksmw3")
animation = &"aim"
centered = false
offset = Vector2(-22, -41)

[node name="combat_weapon" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -18)
sprite_frames = ExtResource("8_fw1v2")
animation = &"Pistol"
offset = Vector2(18, 0)

[node name="combat_arm_front" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("9_7ql2g")
centered = false
offset = Vector2(-22, -41)

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="ActorNav" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_combat_actor_entered"]
[connection signal="frame_changed" from="hoopz_normal_body" to="." method="_on_hoopz_upper_body_frame_changed"]
[connection signal="frame_changed" from="combat_lower_body" to="." method="_on_combat_lower_body_frame_changed"]
